fix styles wrapping code and images with max-with: 95vw

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -34,6 +34,7 @@ a:hover {
 
 pre,
 code {
+  max-width: 95vw;
   font-family: monospace;
   background-color: #f5f2f0;
   padding: 2px 4px;
